--- a/client/index.html
+++ b/client/index.html
@@ -3,13 +3,33 @@
   <head>
     <title>Back End Assessment</title>
   </head>
-  <input class="container">
+  <body class="container">
     <button id="complimentButton">Get a compliment</button>
+
+    <br/>
+    <br/>
+
+
     <button id="fortuneButton">panda express fortune cookie</button>
-    <input type="" name="vent" id="vent">vent here</input>
-    <button id=""></button>
-    <select name="" id="">hello homie</select>
-    <button id=""></button>
+
+    <br/>
+    <br/>
+    
+    <input placeholder="New fortune" id="newFortuneInput"/>
+    <button id="newFortuneButton">new fortune</button>
+
+    <br/>
+    <br/>
+    
+    <input placeholder="index"  id="updateFortuneIndex"/>
+    <input  placeholder="update fortune" id="updateFortuneInput"/>
+    <button id="updateFortuneButton">Update</button>
+
+    <br/>
+    <br/>
+
+    <input placeholder="index"  id="deleteFortuneInput"/>
+    <button id="deleteFortuneButton">Delete</button>
 
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="main.js"></script>
