--- a/client/index.html
+++ b/client/index.html
@@ -12,10 +12,29 @@
 
     <button id="fortuneButton">panda express fortune cookie</button>
 
-    <br/>
-    <br/>
     
-    <input placeholder="New fortune" id="newFortuneInput"/>
+    <br/>
+    <br/>
+
+
+    <button id="jokeBtn">joke time</button>
+    <br/>
+    <br/>
+
+
+    <button id="randomcar">get a car</button>
+    <br/>
+    <br/>
+
+
+    <button id="yourDeath">how will you die?</button>
+    <br/>
+    <br/>
+
+<h1>Ask a question! (hold it in your mind)</h1>
+    <button id="8ball">8ball</button>
+    
+    <!-- <input placeholder="New fortune" id="newFortuneInput"/>
     <button id="newFortuneButton">new fortune</button>
 
     <br/>
@@ -29,7 +48,7 @@
     <br/>
 
     <input placeholder="index"  id="deleteFortuneInput"/>
-    <button id="deleteFortuneButton">Delete</button>
+    <button id="deleteFortuneButton">Delete</button> -->
 
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="main.js"></script>
